make main-page and organize project structure

--- a/index.html
+++ b/index.html
@@ -5,12 +5,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/main-page.css">
     <title>XYZ DATA</title>
 </head>
 <body>
-    <div class="container">
-        
+    <div class="background">
+        <div class="container">
+            <div class="container__nav">
+                <div class="container__logo">
+                    <h1>XYZ DATA</h1>
+                    <i class="fas fa-laptop-code"></i>
+                </div>
+            </div>
+
+
+            <div class="container__grid">
+                <a href="./klient.html" class="container__btn">
+                    <i class="fas fa-user"></i>
+                    <h2>Klient</h2>
+                    <p>Przejście do panelu wyceny projektu</p>
+                </a>
+                <a href="./php/logowanie.php" class="container__btn">
+                    <i class="fas fa-user-tie"></i>
+                    <h2>Pracownik</h2>
+                    <p>Przejście do panelu pracownika</p>
+                </a>
+            </div>
+
+        </div>
     </div>
+    <footer>
+        <p>Projekt i realizacja: Jakub Bednarczyk 3etG</p>
+        <div class="contact">
+            <p>telefon: +48 901 934 934</p>
+            <p>e-mail: xyzdata@mail.com</p>
+            <p>Adres: 20-110 Lublin, ul. Miła 9</p>
+        </div>
+    </footer>
+    
 </body>
 </html>
