zrobienie panelu wyceny projektu

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 
             <div class="container__grid">
-                <a href="./klient.html" class="container__btn">
+                <a href="./wycena.html" class="container__btn">
                     <i class="fas fa-user"></i>
                     <h2>Klient</h2>
                     <p>Przejście do panelu wyceny projektu</p>
